src/tui/snapshots/zanxio__tui__ui__tests__render_connected_with_server_info.snap
---
source: src/tui/ui.rs
assertion_line: 107
expression: "render_to_string(&app, 60, 10)"
---
┌Zanxio 0.1.0──────────────────────────────────────────────┐
│ ● Connected  v1.0.0  uptime: 65s                         │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│                     Press 'q' to quit                    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
