src/tui/snapshots/zanxio__tui__ui__tests__render_connecting.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 60, 10)"
---
┌Zanxio 0.1.0──────────────────────────────────────────────┐
│ ● Connecting...                                          │
└──────────────────────────────────────────────────────────┘
┌Ready───────────────────────┐┌Working─────────────────────┐
│ID  Pr Queue Type   Since At││ID  Pr Queue Type   Since At│
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
