src/tui/snapshots/zanxio__tui__ui__tests__render_empty_panes_connected.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 120, 8)"
---
┌Zanxio 0.1.0──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ● Connected  v1.0.0  uptime: 10.0s                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Ready─────────────────────────────────────────────────────┐┌Working───────────────────────────────────────────────────┐
│ID          Pri  Queue       Type         Since      Att  ││ID          Pri  Queue       Type         Since      Att  │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
