src/tui/snapshots/zanxio__tui__ui__tests__render_populated_panes.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 120, 12)"
---
┌Zanxio 0.1.0──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ● Connected  v1.0.0  uptime: 2.0m                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Ready─────────────────────────────────────────────────────┐┌Working───────────────────────────────────────────────────┐
│ID          Pri  Queue       Type         Since      Att  ││ID          Pri  Queue       Type         Since      Att  │
│job-emails- 0    emails      send_email   5.2s ago   0    ││job-emails- 0    emails      send_email   3.1s ago   1    │
│job-reports 0    reports     gen_report   1.0m ago   2    ││job-billing 0    billing     charge       2.5m ago   3    │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
